syntax = "proto3";

package depositmsg.pb;

message ContactMessagePull {
    string startId = 1;
}

message ContactMessage {
    string id = 1;
    bytes fromPeerId = 2;
    bytes toPeerId = 3;
    string msgId = 4;
    bytes  msgData = 5;
    int64  depositTime = 6;
}


message GroupMessagePull {
    string groupId = 1;
    string startId = 2;
}

message GroupMessage {
    string id = 1;
    bytes fromPeerId = 2;
    string groupID = 3;
    string msgId = 4;
    bytes  msgData = 5;
    int64  depositTime = 6;
}

message MessageAck {
    string msgId = 1;
}